--- a/project_tracker/quality_control/templates/quality_control/feature_list.html
+++ b/project_tracker/quality_control/templates/quality_control/feature_list.html
@@ -2,9 +2,10 @@
 
 {% block content %}
     <h1>Список запросов на улучшение</h1>
+    <p><a href="{% url 'quality_control:add_feature' %}">Добавить запрос на улучшение</a></p>
     <ul>
         {% for feature in feature_list %}
-            <li><a href="{% url 'quality_control:feature_detail' feature.id %}">{{ feature.title }}</a></li>
+            <li><a href="{% url 'quality_control:feature_detail' feature.id %}">{{ feature.title }}</a> - {{ feature.status }}</li>
         {% endfor %}
     </ul>
 {% endblock %}
