--- a/project_tracker/quality_control/templates/quality_control/feature_detail.html
+++ b/project_tracker/quality_control/templates/quality_control/feature_detail.html
@@ -2,6 +2,9 @@
 
 {% block content %}
     <h1>{{ feature.title }}</h1>
+    <p><a href="{% url 'quality_control:update_feature' feature.id %}">Изменить запрос на улучшение</a></p>
+    <p><a href="{% url 'quality_control:delete_feature' feature.id %}" onclick="return confirm('Вы уверены, что хотите удалить этот запрос на улучшение?');">Удалить запрос на улучшение</a></p>
+
     <p>{{ feature.description }}</p>
     <p>status: {{ feature.status }}, priority: {{ feature.priority }}</p>
     <p>project: {{ feature.project.name }}</p> <p>task: {{ feature.task.name }}</p>
