--- a/project_tracker/tasks/templates/tasks/project_detail.html
+++ b/project_tracker/tasks/templates/tasks/project_detail.html
@@ -5,12 +5,19 @@
     <p>{{ project.description }}</p>
 
     <!-- Ссылка для изменения проекта -->
+    {% if perms.tasks.change_project %}
     <p><a href="{% url 'tasks:update_project' project.id %}">Изменить проект</a></p>
+    {% endif %}
+
+    {% if perms.tasks.add_task %}
     <!-- Ссылка для добавления новой задачи -->
     <p><a href="{% url 'tasks:add_task_to_project' project.id %}">Добавить новую задачу</a></p>
+    {% endif %}
 
+    {% if perms.tasks.delete_project %}
     <!-- Ссылка удаления проекта -->
     <p><a href="{% url 'tasks:delete_project' project.id %}" onclick="return confirm('Вы уверены, что хотите удалить этот проект?');">Удалить проект</a></p>
+    {% endif %}
 
     <h2>Задачи в проекте</h2>
     <ul>
